crates/reap-durable-writer/tests/ui/durable_acknowledgement_is_move_only.rs
use reap_durable_writer::DurableAcknowledgement;

fn replay(acknowledgement: DurableAcknowledgement) {
    let _first = acknowledgement.clone();
    let _second = acknowledgement;
}

fn main() {}
